Fixed the z-index issue

--- a/styles.css
+++ b/styles.css
@@ -231,7 +231,7 @@ footer i:hover{
     padding-left: 1rem;
     right: 0;
     background-color: black;
-    z-index: 10;
+    z-index: 25;
   }
 
   .group section:nth-of-type(4){
